# rehor

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runner  OPERATIONS.md  README.md  docker-compose.yml  entrypoint.sh  init.sh  mock_api.README.md  mock_api.py  pyproject.toml
.tekton/: platform-frontend-ai-dev-memory-server-pull-request.yaml  platform-frontend-ai-dev-memory-server-push.yaml  platform-frontend-ai-dev-proxy-pull-request.yaml  platform-frontend-ai-dev-proxy-push.yaml  platform-frontend-ai-dev-pull-request.yaml  platform-frontend-ai-dev-push.yaml
bot/: agent.py  config.py  costs.py  merge.py  run.py  transcripts.py
dashboard/: DEVELOPMENT.md  mock-server.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
deploy/: template.yaml
dev-proxy/: go.mod  go.sum
memory-server/: pyproject.toml  seed_from_json.py
memory-server/bot_memory_server/: api.py  artifacts.py  metrics.py  models.py  schema.sql  server.py
memory-server/bot_memory_server/migrations/: m002_drop_legacy_columns.py
memory-server/bot_memory_server/tools/: cycles.py  konflux.py  org_members.py  rag.py  slack.py  tasks.py
memory-server/src/: api.py  events.py  schema.sql  server.py
memory-server/src/migrations/: m001_generic_tasks.py
memory-server/src/tools/: org_members.py  rag.py  slack.py  tasks.py
memory-server/tests/: test_costs_and_analytics.py  test_cycle_runs_regression.py  test_db_migration.py  test_konflux.py  test_memory_upload.py  test_migration_001.py  test_read_switchover.py  test_slack_digest.py  test_task_pause_unpause.py
proxy/: start.sh  (+2 more)
(+188 files in other folders)
