[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-memory-server"
version = "0.1.0"
description = "MCP memory server for the dev bot — task tracking + RAG"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "websockets>=13.0",
    "zstandard>=0.23",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["bot_memory_server*"]

[tool.setuptools.package-data]
bot_memory_server = ["schema.sql", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
